--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
